samples/_failures_safe/1761218526_40422c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1fb97be5.c: In function ‘main’:
./samples/SAFE/__tmp_1fb97be5.c:155:5: error: expected declaration or statement at end of input
  155 |     printf("\nMatrix Addition:\n");
      |     ^~~~~~
